# deepaper

./: .gitignore  README.md  config.yaml.example  demo.tape  pyproject.toml
.claude/commands/: deepaper.md
.omc/: project-memory.json
.omc/plans/: deepaper-roadmap.md  open-questions.md  paper-manager-plan.md  virality-and-citations.md
.omc/scientist/reports/: 20260329_cloud_sync_comparison.md
.omc/specs/: deep-interview-paper-manager.md
docs/superpowers/plans/: 2026-04-06-pipeline-perf-optimization.md  2026-04-07-per-paper-analysis-v2.md
docs/superpowers/specs/: 2026-04-06-output-schema-design.md  2026-04-06-pipeline-issues-log.md  2026-04-06-pipeline-perf-optimization-design.md  2026-04-06-pipeline-v1-wip-status.md  2026-04-07-per-paper-analysis-v2-design.md
papers/llm/pretraining/: deepseek-v3-technical-report.md  olmo-3.md  scaling-laws-for-neural-language-models.md
papers/llm/reasoning/: deepseek-r1-incentivizing-reasoning-capability-in-llms-via-reinforcement.md
papers/recsys/generative-rec/: generative-recommender-with-end-to-end-learnable-item-tokenization.md  onesearch-v2-the-latent-reasoning-enhanced-self-distillation-generative-search.md
src/deepaper/: citations.py  cli.py  config.py  content_checklist.py  defaults.py  extractor.py  gates.py  output_schema.py  pipeline_io.py  prompt_builder.py  registry.py  sync.py  templates.py  writer.py
src/deepaper/prompt_templates/: extractor.md
src/paper_manager/: analyzer.py  cli.py  config.py  downloader.py  search.py  sync.py  writer.py
templates/: default.md
tests/: conftest.py  test_analyzer.py  test_cli.py  test_content_checklist.py  test_downloader.py  test_e2e_papers.py  test_extractor_checks.py  test_frontmatter.py  test_gates.py  test_gates_integration.py  test_golden_regression.py  test_pipeline_io.py  test_prompt_builder.py  test_registry.py  test_search.py  test_writer.py
